--- a/2014/Code/Source/TVGenius/TVGenius.MockTV/TVGenius.MockTV.csproj
+++ b/2014/Code/Source/TVGenius/TVGenius.MockTV/TVGenius.MockTV.csproj
@@ -70,6 +70,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="TVState.cs" />
     <Compile Include="TVWin.xaml.cs">
       <DependentUpon>TVWin.xaml</DependentUpon>
       <SubType>Code</SubType>
