--- a/2014/Code/Source/TVGenius/TVGenius.SignalTransfer/TVGenius.SignalTransfer.csproj
+++ b/2014/Code/Source/TVGenius/TVGenius.SignalTransfer/TVGenius.SignalTransfer.csproj
@@ -48,22 +48,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Events\SignalReceivedEventArgs.cs" />
+    <Compile Include="ActionType.cs" />
+    <Compile Include="ChannelAction.cs" />
+    <Compile Include="Events\ActionReceivedEventArgs.cs" />
     <Compile Include="Dispatcher\SingalDispatcherBase.cs" />
     <Compile Include="Dispatcher\DispatcherFactory.cs" />
     <Compile Include="Dispatcher\HaierDispatcher.cs" />
+    <Compile Include="Events\NetClinetMessage.cs" />
+    <Compile Include="MouseAction.cs" />
+    <Compile Include="NetClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SignalDefine.cs" />
+    <Compile Include="SignalMap.cs" />
     <Compile Include="SignalReceiver.cs" />
     <Compile Include="Dispatcher\TCLDispatcher.cs" />
+    <Compile Include="VolumeAction.cs" />
+    <Compile Include="ZMQClientPool.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TVGenius.Model\TVGenius.Model.csproj">
       <Project>{fea230bd-6012-473c-9bbf-f8376c1bb9d4}</Project>
       <Name>TVGenius.Model</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TVGenius.TVScanner\TVGenius.TVScanner.csproj">
-      <Project>{6A45DEE4-EB01-4452-9E57-9FD9A640675A}</Project>
-      <Name>TVGenius.TVScanner</Name>
     </ProjectReference>
     <ProjectReference Include="..\TVGenius.Utils\TVGenius.Utils.csproj">
       <Project>{431e169c-32c0-4117-bc6a-012a8fa4653b}</Project>
