增加电视控制功能

--- a/2014/Code/Source/TVGenius/TVGenius.ResourceMgr/TVGenius.ResourceMgr.csproj
+++ b/2014/Code/Source/TVGenius/TVGenius.ResourceMgr/TVGenius.ResourceMgr.csproj
@@ -39,8 +39,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="VideoList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TVGenius.Utils\TVGenius.Utils.csproj">
+      <Project>{431E169C-32C0-4117-BC6A-012A8FA4653B}</Project>
+      <Name>TVGenius.Utils</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
