--- a/2014/Code/Source/TVGenius/TVGenius.MockTV/TVGenius.MockTV.csproj
+++ b/2014/Code/Source/TVGenius/TVGenius.MockTV/TVGenius.MockTV.csproj
@@ -103,9 +103,17 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\TVGenius.Common\TVGenius.Common.csproj">
+      <Project>{bccafd68-d584-4928-8f28-617bc85f9d18}</Project>
+      <Name>TVGenius.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TVGenius.Model\TVGenius.Model.csproj">
       <Project>{fea230bd-6012-473c-9bbf-f8376c1bb9d4}</Project>
       <Name>TVGenius.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TVGenius.ResourceMgr\TVGenius.ResourceMgr.csproj">
+      <Project>{6741B68F-DB48-4F29-8E06-5BC6E4775651}</Project>
+      <Name>TVGenius.ResourceMgr</Name>
     </ProjectReference>
     <ProjectReference Include="..\TVGenius.SignalTransfer\TVGenius.SignalTransfer.csproj">
       <Project>{5E872651-1DA2-4CD4-8A1D-E01216E967A8}</Project>
