Bug修复，细节完善

--- a/2014/Code/Source/TVGenius/TVGenius.MobileApp/App.config
+++ b/2014/Code/Source/TVGenius/TVGenius.MobileApp/App.config
@@ -7,7 +7,7 @@
 
   <appSettings>
     <!-- 模拟WIFI -->
-    <add key="SiumWIFI" value="tcp://127.0.0.1:13336"/>
+    <add key="IsDebug" value="true"/>
     <add key="LocalDB" value=""/>
   </appSettings>
 
